--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
   "name": "steganography",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://teboweb.com/steganography",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.0.24",
+    "@types/jquery": "^3.3.31",
+    "@types/md5": "^2.1.33",
+    "@types/node": "^13.1.0",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "bootstrap": "^4.4.1",
+    "browser-image-manipulation": "^0.3.1",
+    "md5": "^2.2.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "simple-crypto-js": "^2.2.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
