--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@types/react-dom": "^16.9.4",
     "bootstrap": "^4.4.1",
     "browser-image-manipulation": "^0.3.1",
+    "flexbox-react": "^4.4.0",
     "md5": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-range-slider": "^1.1.2",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "simple-crypto-js": "^2.2.0",
-    "typescript": "^3.7.4"
+    "react-dropzone": "^11.0.2",
+    "react-scripts": "^3.4.1",
+    "react-spinning-wheel": "^1.1.7",
+    "simple-crypto-js": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "typescript": "^3.9.6"
   }
 }
